welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:11: error: not found: value vuBiscuit
		if (vuBiscuit==false){
                    ^